Actualización 24 Julio: se incluyen  las guías para prácticas, reporte de prácticas y ensayos

--- a/Presentacion Curso Reveal/css/reveal.css
+++ b/Presentacion Curso Reveal/css/reveal.css
@@ -1553,3 +1553,9 @@ body {
 
 .zoomed .reveal .roll span:after {
   visibility: hidden; }
+
+html.dimbg .slide-background {
+  opacity: 0.5 !important; }
+
+html.dimbg2 .slide-background {
+  opacity: 0.6 !important; }
